--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vY8JM0M+Vjbl7MxVL0GH/T+J7R6a60CJWUYraoASWdGdoE9FlxHo7+k/QdzfcpXYCILj4i6GUh5nOQR3c3vsJIZzs6z9l0RVDW6+dGWUThn+oW2Bn/RehsHnBBmLNFfc">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LWdz99ksC+LY21VeoHTzjFiha4js38j/Fh8Zgzx7GDwHWmMyKbpbYXY+6vMlrNRDzG586yvjooklm829DvqHDghJ9WMVIWwNm8PpIHoMvMwAnMcds5+Ycd1M1PCLQJ/f">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -58,7 +58,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
